# sem10-algo-hw03

./: Makefile  main.tex  task01.tex  task02.tex  task03.tex  task04.tex  task05.tex  task06.tex  task07.tex
code/: Cargo.toml
code/proptest-regressions/: task02.txt
code/proptest-regressions/task02/: tests.txt
code/src/: lib.rs  task02.rs
code/src/task02/: mod.rs  tests.rs
code/src/task04/: mod.rs  tests.rs
code/src/task06/: mod.rs
hs/: hs.cabal  package.yaml
hs/src/: Lib.hs
